--- a/index.html
+++ b/index.html
@@ -56,44 +56,91 @@
 
 </div>
 
-<section id="">
+<div class="intro">
     <div class="row-1">
-        <div class="column-1">
-            <!--<img src="img/sky.jpg" width="100%">-->
-            <div class="card">
-                <p style="left: 20px;position: relative;top: 80px;font-size: 30px">23<br>FEB</p>
-                <small style="margin-left: 100px;margin-bottom: 10px;bottom: 60px;position: relative;">DJ MUSIC EVENT</small>
-                <h1 style="margin-left: 100px;position: relative;bottom: 75px">LIVE IN SYDNEY</h1>
-                <p style="position: relative;bottom: 90px;left: 100px"><i class="fas fa-calendar-alt"></i> WEDNESDAY 28 DECEMBER 2014<br>08:55PM TO 12:00AM</p>
-                <p style="position: relative;bottom: 98px;left: 100px">NEXEN SQUARE FOR PEOPLE<br><i class="fas fa-location-arrow"></i> AUSTRALIA,SYDNEY</p>
-            </div>
+    <blockquote class="block-1">
+        <h1 class="quote-1">UPCOMMING GIGS</h1>
+    </blockquote>
+    <div class="card">
+        <h1 class="card-left">23<br><small>FEB</small></h1>
+        <small class="card-title">DJ MUSIC EVENT</small>
+        <h4 class="card-desi">LIVE IN SYDNEY</h1>
+        <small class="date">WEDNESSDAY 25 DECEMBER 2018</small>
+        <small class="date-1">NEXEN SQUARE FOR PEOPLE <br>AUSTRALIA SANDY</small>
+    </div>
+    <div class="card-1">
+        <h1 class="card-left">23<br><small>FEB</small></h1>
+        <small class="card-title">DJ MUSIC EVENT</small>
+        <h4 class="card-desi">LIVE IN SYDNEY</h1>
+        <small class="date">WEDNESSDAY 25 DECEMBER 2018</small>
+        <small class="date-1">NEXEN SQUARE FOR PEOPLE <br>AUSTRALIA SANDY</small>
+    </div>
+    <div class="card-1b">
+        <h1 class="card-left">23<br><small>FEB</small></h1>
+        <small class="card-title">DJ MUSIC EVENT</small>
+        <h4 class="card-desi">LIVE IN SYDNEY</h1>
+        <small class="date">WEDNESSDAY 25 DECEMBER 2018</small>
+        <small class="date-1">NEXEN SQUARE FOR PEOPLE <br>AUSTRALIA SANDY</small>
+    </div>
+    <div class="card-2b">
+        <h1 class="card-left">23<br><small>FEB</small></h1>
+        <small class="card-title">DJ MUSIC EVENT</small>
+        <h4 class="card-desi">LIVE IN SYDNEY</h1>
+        <small class="date">WEDNESSDAY 25 DECEMBER 2018</small>
+        <small class="date-1">NEXEN SQUARE FOR PEOPLE <br>AUSTRALIA SANDY</small>
+    </div>
+</div>
+
+
+
+<div class="footer">
+    <div class="column-1">
+        <blockquote class="block-f">
+        <h1 class="quote-f">CONTACT US</h1>
+        </blockquote>
+        <div style="position: relative;top: 200px;float: left;left: 80px;width: 20%">
+            <small>phone</small>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            </p>
         </div>
-        <div class="column-1">
-            <!--<img src="img/sky.jpg" width="100%">-->
-            <div class="card">
-                <p style="left: 20px;position: relative;top: 80px;font-size: 30px">23<br>FEB</p>
-                <small style="margin-left: 100px;margin-bottom: 10px;bottom: 60px;position: relative;">DJ MUSIC EVENT</small>
-                <h1 style="margin-left: 100px;position: relative;bottom: 75px">LIVE IN SYDNEY</h1>
-                <p style="position: relative;bottom: 90px;left: 100px"><i class="fas fa-calendar-alt"></i> WEDNESDAY 28 DECEMBER 2014<br>08:55PM TO 12:00AM</p>
-                <p style="position: relative;bottom: 98px;left: 100px">NEXEN SQUARE FOR PEOPLE<br><i class="fas fa-location-arrow"></i> AUSTRALIA,SYDNEY</p>
-            </div>
+        <div style="position: relative;top: 200px;left: 80px;width: 20%">
+            <small>phone</small>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            </p>
         </div>
-        <div class="column-1">
-            <!--<img src="img/sky.jpg" width="100%">-->
-            <div class="card">
-                <p style="left: 20px;position: relative;top: 80px;font-size: 30px">23<br>FEB</p>
-                <small style="margin-left: 100px;margin-bottom: 10px;bottom: 60px;position: relative;">DJ MUSIC EVENT</small>
-                <h1 style="margin-left: 100px;position: relative;bottom: 75px">LIVE IN SYDNEY</h1>
-                <p style="position: relative;bottom: 90px;left: 100px"><i class="fas fa-calendar-alt"></i> WEDNESDAY 28 DECEMBER 2014<br>08:55PM TO 12:00AM</p>
-                <p style="position: relative;bottom: 98px;left: 100px">NEXEN SQUARE FOR PEOPLE<br><i class="fas fa-location-arrow"></i> AUSTRALIA,SYDNEY</p>
-            </div>
+        <div style="position: relative;top: 200px;left: 80px;width: 20%">
+            <small>phone</small>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            </p>
+        </div>
+        <div style="position: relative;top: 200px;left: 80px;width: 20%">
+            <small>phone</small>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            </p>
         </div>
     </div>
-</section>
+
+
+</div>
 
 
 
 
 
+
+
+
+<div>
+    <div class="column-f-r">
+        <blockquote class="block-f-r">
+        <h1 class="quote-f-r" ">LOCATE US </h1>
+    </blockquote>
+    </div>
+
+</div>
+
+
+
+<p style="margin-top: 200px;"></p>
 </body>
 </html>
